--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -222,7 +222,6 @@ a {
 
 .intro-section {
   color: var(--black);
-  background-color: #0018f90d;
   padding-top: 0;
   padding-bottom: 40px;
   position: relative;
@@ -301,7 +300,7 @@ a {
   / 1fr 1fr 1fr;
   grid-auto-flow: column;
   place-content: center start;
-  place-items: start stretch;
+  place-items: stretch stretch;
   overflow: auto;
 }
 
@@ -320,11 +319,12 @@ a {
 .icon-card {
   color: var(--white);
   text-align: left;
-  background-color: #0000;
+  background-color: #0018f90d;
+  border-radius: 20px;
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
-  padding: 20px 0;
+  padding: 40px 20px 20px;
   display: flex;
   position: relative;
   overflow: auto;
@@ -334,6 +334,7 @@ a {
   color: var(--black);
   text-align: left;
   text-transform: none;
+  margin-top: 10px;
   font-family: Figtree, sans-serif;
   font-size: 30px;
   font-weight: 600;
@@ -345,9 +346,9 @@ a {
 
 .icon-description {
   text-align: left;
-  margin-top: 10px;
-  font-size: 16px;
-  line-height: 22px;
+  margin-top: 20px;
+  font-size: 18px;
+  line-height: 24px;
   display: block;
 }
 
@@ -373,8 +374,8 @@ a {
 .print-work-section {
   margin-left: auto;
   margin-right: auto;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 100px;
+  padding-bottom: 60px;
 }
 
 .work-div {
@@ -399,6 +400,7 @@ a {
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 20px;
   width: auto;
   height: 550px;
   margin-bottom: 20px;
@@ -1269,8 +1271,8 @@ a {
   }
 
   .icon-card {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .icon-title {
@@ -1298,6 +1300,7 @@ a {
   .work-div {
     grid-column-gap: 30px;
     width: 95%;
+    padding-top: 60px;
   }
 
   .work1 {
@@ -1545,12 +1548,17 @@ a {
   }
 
   .icon-card {
-    padding: 20px 0 0;
+    padding: 40px;
   }
 
   .icon-title {
-    font-size: 24px;
+    font-size: 28px;
     top: 3px;
+  }
+
+  .icon-description {
+    font-size: 18px;
+    line-height: 25px;
   }
 
   .icon-image {
@@ -1562,7 +1570,7 @@ a {
   }
 
   .print-work-section {
-    padding-top: 60px;
+    padding-top: 20px;
   }
 
   .work-div {
@@ -1591,11 +1599,16 @@ a {
   }
 
   .intro-paragraph {
+    margin-top: 0;
     font-size: 16px;
     line-height: 28px;
   }
 
-  .intro-div, .div-block-3 {
+  .intro-div {
+    width: 90%;
+  }
+
+  .div-block-3 {
     width: 100%;
   }
 
@@ -1638,6 +1651,7 @@ a {
   }
 
   .subtitle {
+    margin-top: 0;
     font-size: 24px;
     line-height: 34px;
   }
@@ -1714,7 +1728,7 @@ a {
 
   .hero-text {
     -webkit-text-stroke-width: 0px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-size: 24px;
     line-height: 30px;
   }
@@ -1732,12 +1746,17 @@ a {
   }
 
   .hero-text-v2 {
+    margin-bottom: 20px;
     font-size: 40px;
     line-height: 40px;
   }
 
   .animate-bg {
     background-size: auto 20%;
+  }
+
+  .hero-title-block {
+    margin-bottom: 40px;
   }
 
   .hero-text-copy {
@@ -1842,20 +1861,21 @@ a {
   }
 
   .grid {
-    grid-row-gap: 10px;
+    grid-row-gap: 20px;
     grid-template-columns: 1fr;
   }
 
   .icon-card {
     text-align: left;
-    padding: 10px 0;
+    padding: 40px 20px 20px;
   }
 
   .icon-title {
-    margin-top: 0;
-    font-size: 18px;
-    line-height: 24px;
+    margin-top: 10px;
+    font-size: 28px;
+    line-height: 30px;
     display: block;
+    position: static;
     top: 2px;
   }
 
@@ -1880,6 +1900,7 @@ a {
   .work-div {
     grid-template-columns: 1fr;
     grid-auto-flow: row;
+    padding-top: 40px;
   }
 
   .work1 {
@@ -1906,7 +1927,7 @@ a {
   }
 
   .intro-div {
-    width: 95%;
+    width: 90%;
   }
 
   .div-block-3 {
@@ -2108,7 +2129,8 @@ a {
   }
 
   .hero-title-block {
-    width: 90%;
+    width: 85%;
+    margin-top: 40px;
   }
 
   .hero-text-copy {
