--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -727,6 +727,7 @@ a {
 
 .copyright {
   color: var(--black);
+  font-size: 16px;
 }
 
 .portfolio-section {
@@ -1184,6 +1185,15 @@ a {
   line-height: 70px;
 }
 
+.sec-content-div {
+  z-index: 10;
+  width: 80%;
+  margin-top: 0;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
 @media screen and (max-width: 991px) {
   .navbar {
     position: relative;
@@ -1490,6 +1500,11 @@ a {
     font-size: 60px;
     line-height: 70px;
   }
+
+  .sec-content-div {
+    width: 90%;
+    margin-top: 0;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1791,6 +1806,11 @@ a {
     font-size: 50px;
     line-height: 60px;
   }
+
+  .sec-content-div {
+    width: 90%;
+    margin-top: 0;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -1996,7 +2016,7 @@ a {
 
   .copyright {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 20px;
     line-height: 20px;
   }
 
@@ -2166,6 +2186,11 @@ a {
   .hero-text-copy.contact-title {
     font-size: 34px;
     line-height: 40px;
+  }
+
+  .sec-content-div {
+    width: 90%;
+    margin-top: 0;
   }
 }
 
