--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -492,8 +492,8 @@ a {
   background-image: url('../images/folded-business-cards.jpg');
 }
 
-.work1.work-alpha-omega-logo {
-  background-image: url('../images/Alpha-Omega-Social-Media-logo.jpg');
+.work1.bubbly-cloth-logo {
+  background-image: url('../images/bubbly-cloth-logo-thumb.jpg');
 }
 
 .work1.work-legends-brochure {
