--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -762,8 +762,10 @@ a {
 
 .image-2 {
   object-fit: fill;
+  background-color: #000;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
+  padding: 20px;
 }
 
 .sticky-content-div {
@@ -904,7 +906,7 @@ a {
 .resources-div {
   text-align: left;
   align-self: stretch;
-  width: 90%;
+  width: 70%;
   margin-top: 40px;
   margin-left: auto;
   margin-right: auto;
