--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -353,7 +353,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   padding-top: 40px;
-  padding-bottom: 60px;
+  padding-bottom: 100px;
 }
 
 .work-div {
@@ -468,6 +468,14 @@ a {
   background-image: url('../images/resilient-dallas-thumb.jpg');
 }
 
+.work1.thf-social {
+  background-image: url('../images/thf-social-media-campagin-cover.jpg');
+}
+
+.work1.ocpo {
+  background-image: url('../images/ocpo-cover.jpg');
+}
+
 .work-link-block {
   text-align: left;
   flex: 0 4 auto;
@@ -510,7 +518,7 @@ a {
 .intro-paragraph {
   margin-top: 20px;
   font-size: 24px;
-  line-height: 38px;
+  line-height: 34px;
 }
 
 .intro-div {
